Added responsible play and how to plat

--- a/pages/responsible.html
+++ b/pages/responsible.html
@@ -53,113 +53,64 @@
     <section class="extra-content" data-scroll-index='0'>
         <div class="container">
             <div class="sectioner-header text-center">
-                <h3>Privacy Policy</h3>
+                <h3>Responsible Play</h3>
                 <span class="line"></span>
-
             </div>
-            <p style="font-weight: 600; text-align: justify;">At CricBrawl, we are committed to protecting your privacy
-                and safeguarding your
-                personal information. This Privacy
-                Policy outlines how we collect, use, and protect the information you provide to us when using our
-                website, mobile
-                application, and other services offered by CricBrawl. By using our platform, you consent to the
-                practices described in
-                this Privacy Policy.
-
-            </p>
-            <h5>Scope of the Privacy Policy</h5>
-            <p>This Privacy Policy applies to all information collected by CricBrawl from users of our website, mobile
-                application, and
-                other services. It does not apply to information collected by CricBrawl through other means.</p>
-
-            <h5>Information We Collect</h5>
-            <p>CricBrawl may collect both personal and non-personal information from users in various ways, including:
-            </p>
-            <ul class="list-spacing">
-                <li>Information provided by users during registration or account setup, such as name, email address,
-                    mailing
-                    address, phone
-                    number, and other relevant details.</li>
-                <li>Information collected automatically when users interact with our platform, including IP address,
-                    device
-                    information,
-                    browser type, and usage data.</li>
-                <li>Information obtained from third-party sources or through third-party integrations, where permitted
-                    by
-                    law.</li>
-                <li>We collect this information for purposes such as providing and improving our services, personalizing
-                    user experiences,
-                    communicating with users, and ensuring the security of our platform.</li>
-            </ul>
-
-            <h5>Use of Information</h5>
-            <p>CricBrawl uses the information collected for various purposes, including but not limited to:</p>
-            <ul class="list-spacing">
-                <li>Providing, maintaining, and improving our services.</li>
-                <li>Personalizing user experiences and content.</li>
-                <li>Communicating with users about their accounts, transactions, and promotions.</li>
-                <li>Sending marketing communications, newsletters, and promotional offers.</li>
-                <li>Analyzing user preferences, trends, and behavior to enhance our services.</li>
-                <li>Complying with legal and regulatory requirements.</li>
-            </ul>
-
-            <h5>Third-Party Links and Advertising</h5>
-            <p>Our platform may contain links to third-party websites or services, and we may use third-party
-                advertising partners to
-                display advertisements. These third-party websites and services have their own privacy policies, and we
-                are not
-                responsible for their practices. Users should review the privacy policies of these third parties before
-                providing any
-                personal information.
+            <p style="font-weight: 600; text-align: justify;">
+                At CricBrawl, we are committed to promoting responsible gaming practices and ensuring the well-being of
+                our users. We
+                recognize that while gaming can be enjoyable, it's essential to maintain a healthy balance and exercise
+                self-control. To
+                support responsible play, we have implemented the following measures
             </p>
 
-            <h5>Data Security</h5>
-            <p>CricBrawl employs physical, electronic, and managerial measures to protect the confidentiality,
-                integrity, and security
-                of user information. We use encryption, firewalls, access controls, and other security technologies to
-                safeguard user
-                data against unauthorized access, disclosure, alteration, or destruction.</p>
-
-            <h5>Children's Privacy</h5>
-            <p>Our Platform is not intended for children under the age of 18, and we do not knowingly collect personal
-                information from
-                children. If you are a parent or guardian and believe that your child has provided us with personal
-                information, please
-                contact us to request deletion of the information.
+            <h5>Age Verification</h5>
+            <p>We require all users to be at least 18 years old to participate in contests and use our platform. We may
+                request age
+                verification documentation to ensure compliance with this requirement.
             </p>
 
-            <h5>Access from Outside the US</h5>
-            <p>While our services are primarily intended for users in the United States, personal and non-personal data
-                may be
-                transferred to, stored in, and processed in other countries where our service providers are located. By
-                using our
-                services, you consent to the transfer and processing of your information as described in this Privacy
-                Policy.</p>
 
-            <h5>Tax and Regulatory Filing</h5>
-            <p>In certain circumstances, such as when users withdraw funds or have winnings in excess of required
-                thresholds, we may
-                require users to provide additional information, including social security numbers, for identity
-                verification and tax
-                purposes. We handle this information in accordance with applicable laws and regulations. </p>
-
-            <h5>Revisions to the Privacy Policy</h5>
-            <p>CricBrawl reserves the right to update or revise this Privacy Policy periodically. We will notify users
-                of
-                any material
-                changes to this Privacy Policy by posting the updated version on our platform or by other means as
-                required
-                by law.
-                Users are encouraged to review this Privacy Policy regularly to stay informed about our data practices.
+            <h5>Self-Exclusion</h5>
+            <p>We offer self-exclusion options for users who wish to take a break from gaming or restrict their access
+                to our platform
+                temporarily or permanently. Users can request self-exclusion by contacting our support team.
+            </p>
+            <p>Play Within Your Means: Please play responsibly and only deposit funds that you can afford to spend on
+                gaming
+                activities. It's essential to set realistic budgets and avoid chasing losses.
             </p>
 
-            <h5>Contact Information</h5>
-            <p>If you have any questions, concerns, or requests regarding this Privacy Policy or the handling of your
-                personal
-                information, please contact us at info@cricbrawl.com.</p>
-            <br />
-            <b><i>This Privacy Policy was last updated on 04/01/2024.</i></b>
+            <h5>Seek Help if Needed</h5>
+            <p>If you or someone you know is struggling with gambling addiction or related issues, please reach out to
+                us at
+                info@cricbrawl.com. We are here to assist you and provide support.
+            </p>
 
+            <h5>Additional Resources</h5>
+            <p>There are various organizations and resources available to individuals who need help with problem
+                gambling. The National
+                Council On Problem Gambling operates a 24-hour confidential toll-free helpline that you can reach by
+                phone or text at
+                1-800-522-4700 or chat at ncpgambling.org/chat.
+            </p>
+
+            <p><i>
+                    By promoting responsible gaming practices and providing support to our users, we aim to create a
+                    safe
+                    and enjoyable
+                    gaming environment for everyone. We encourage users to play responsibly, set limits, and seek help
+                    if
+                    needed to ensure a
+                    positive gaming experience. If you or someone you know is struggling with gaming addiction or
+                    related
+                    issues, please
+                    reach out to our support team or seek assistance from a qualified professional. Your well-being is
+                    our
+                    top priority at
+                    CricBrawl.
+                </i>
+            </p>
 
         </div>
     </section>
