--- a/pages/terms.html
+++ b/pages/terms.html
@@ -57,7 +57,8 @@
                 <span class="line"></span>
 
             </div>
-            <p style="font-weight: 600">Welcome to CricBrawl! These Terms and Conditions ("Terms") govern your access
+            <p style="font-weight: 600; text-align: justify;">Welcome to CricBrawl! These Terms and Conditions ("Terms")
+                govern your access
                 to and use of the CricBrawl website (the "Website") and mobile application (the "App"), collectively
                 referred to as the "Platform," provided
                 by CricBrawl ("we," "us," or "our"). By accessing or using the Platform, you agree to be bound by these
@@ -296,6 +297,10 @@
                             </li>
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="privacy.html">Privacy
                                     Policy</a>
+                            </li>
+                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a
+                                    href="responsible.html">Responsible
+                                    Play</a>
                             </li>
                         </ul>
                     </div>
