--- a/index.html
+++ b/index.html
@@ -429,6 +429,8 @@
                   Conditions</a></li>
               <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/privacy.html">Privacy
                   Policy</a></li>
+              <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="pages/responsible.html">Responsible
+                  Play</a></li>
             </ul>
           </div>
 
