--- a/pages/fantasy-points.html
+++ b/pages/fantasy-points.html
@@ -188,9 +188,12 @@
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="privacy.html">Privacy
                                     Policy</a>
                             </li>
+                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a
+                                    href="responsible.html">Responsible
+                                    Play</a>
+                            </li>
                         </ul>
                     </div>
-
 
                     <div class="col-md-3 col-sm-6 col-6 mb-3 p-0 float-left">
                         <h6 class="mb-4 font-weight-bold text-uppercase">Connect</h6>
