--- a/pages/faq.html
+++ b/pages/faq.html
@@ -119,6 +119,10 @@
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="privacy.html">Privacy
                                     Policy</a>
                             </li>
+                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a
+                                    href="responsible.html">Responsible
+                                    Play</a>
+                            </li>
                         </ul>
                     </div>
 
