--- a/pages/how-to-play.html
+++ b/pages/how-to-play.html
@@ -53,9 +53,94 @@
     <section class="extra-content" data-scroll-index='0'>
         <div class="container">
             <div class="sectioner-header text-center">
-                <h3>How to Play</h3>
+                <h3>How to Play CricBrawl: A Game of Skill</h3>
                 <span class="line"></span>
             </div>
+            <p style="font-weight: 600; text-align: justify;">
+                Welcome to CricBrawl, where your cricket knowledge and strategic skills take center stage! Whether
+                you're a die-hard
+                cricket fan or just getting started, this guide will walk you through the basics of playing fantasy
+                cricket on
+                CricBrawl.
+            </p>
+
+            <h5>Sign Up</h5>
+            <p>To get started, visit the CricBrawl website or download the mobile app from the App Store or Google
+                Play Store. Once
+                you're on the platform, click on the "Sign Up" button and follow the prompts to create your account.
+                You'll need to
+                provide some basic information like your name, email address, and create a password.
+            </p>
+
+            <h5>Understand the Concept</h5>
+            <p>CricBrawl is a fantasy cricket platform where you act as a team manager, assembling your dream team
+                of real-life cricket
+                players to compete in virtual matches.
+            </p>
+            <p>Unlike games of chance, CricBrawl is a game of skill, where your decisions and insights into player
+                performance can lead
+                to victory.
+            </p>
+
+            <h5>Join a Contest or whole Tournament</h5>
+            <p>Browse through the available contests / brawls on CricBrawl. You can also choose to play the whole
+                tournament. Contests
+                / Brawls are competitions where you can enter your fantasy team to compete against other users.
+                Choose a contest that
+                fits your preferences.
+            </p>
+
+            <h5>Create Your Team</h5>
+            <p>Dive into the player selection process by choosing your squad from a pool of real players
+                participating in upcoming
+                cricket matches.
+            </p>
+            <p>Consider each player's strengths, recent form, match conditions, and role in the game to craft a
+                winning combination.
+            </p>
+
+            <h5>Follow the Action</h5>
+            <p>Once your team is set, sit back and enjoy the live cricket action. Every run, wicket, catch, and six
+                impacts your team's
+                performance.
+            </p>
+            <p> Stay engaged with real-time match updates and player statistics, allowing you to assess your team's
+                performance and make
+                strategic decisions on the fly.
+            </p>
+
+            <h5>Score Points and Win Prizes</h5>
+            <p>As the match progresses, track how your chosen players perform. Each player earns points based on
+                their on-field
+                achievements, such as scoring runs, taking wickets, and fielding contributions. Fantasy Points are
+                explained in detail
+                here.
+            </p>
+            <p> Your goal is to accumulate the highest points total among all participants in your contest. Skillful
+                player selection
+                and strategic team management are key to achieving victory.
+            </p>
+
+
+            <h5>Enjoy the Experience</h5>
+            <p>Win or lose, CricBrawl offers an immersive and entertaining experience for cricket enthusiasts of all
+                levels.
+            </p>
+            <p> Continue refining your skills, exploring different contest formats, and competing against fellow
+                cricket fans to enhance
+                your gaming experience.
+            </p>
+            <p>
+                Remember, at CricBrawl, success is not just about luck—it's about skill, strategy, and a passion for
+                the game. So,
+                assemble your team, unleash your cricket expertise, and embark on an exhilarating fantasy cricket
+                journey with us!
+            </p>
+
+            <p> That's it! Now you're ready to dive into the world of fantasy cricket and experience the thrill of
+                building your own
+                dream team. Happy gaming and may the best team win!
+            </p>
 
 
         </div>
@@ -85,6 +170,10 @@
                             </li>
                             <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="privacy.html">Privacy
                                     Policy</a>
+                            </li>
+                            <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a
+                                    href="responsible.html">Responsible
+                                    Play</a>
                             </li>
                         </ul>
                     </div>
