Added slider animation

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
           <div class="feature-mobile">
             <div class="slider-container" id="initImage">
-              <img src="images/init-1.png" class="img-fluid wow fadeInUp slider-image"
+              <img src="images/init-1.png" class="img-fluid slider-image wow zoomIn"
                 style="width: 370px; height: 700px;" />
               <span class="prev">&#10094;</span>
               <span class="next">&#10095;</span>
@@ -563,7 +563,7 @@
 
   <script>
 
-    const images1 = ["images/iphone-screen.svg", "images/feature-1.png", "images/feature-2.png", "images/feature-3.png", "images/feature-4.png", "images/feature-5.png", "images/feature-6.png", "images/feature-7.png"];
+    const images1 = ["images/iphone-screen.svg", "images/feature-0.png", "images/feature-1.png", "images/feature-2.png", "images/feature-3.png", "images/feature-4.png", "images/feature-5.png", "images/feature-6.png", "images/feature-7.png"];
     const images2 = ["images/init-1.png", "images/init-2.png", "images/init-3.png"]
 
     // Initialize Slider class with container ID and images array
