seo meta title description and keywords

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>CricBrawl</title>
+  <title>CricBrawl - USA's Premier Fantasy Cricket Gaming Platform</title>
+  <meta name="description"
+    content="Experience the excitement of fantasy cricket like never before with CricBrawl! As the top destination for cricket enthusiasts in the USA, CricBrawl offers a thrilling gaming experience that combines strategy, skill, and competition. Build your dream team, manage players, and compete in real-time matches against friends and rivals nationwide. With immersive gameplay, real-time scoring, and exciting rewards, CricBrawl takes fantasy cricket to the next level. Join the action now and prove your skills on the virtual pitch with CricBrawl! Visit cricbrawl.com for more details!">
+  <meta name="keywords"
+    content="Cricket in America, Fantasy Cricket App USA, Cricket Fantasy App Download USA, USA Cricket, Best Fantasy Cricket App USA, Mobile Fantasy Cricket USA, Fantasy Cricket USS, Play Fantasy Cricket USA, Real Cash Fantasy Cricket USA, USA Fantasy Cricket Leagues">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
