--- a/pages/how-to-play.html
+++ b/pages/how-to-play.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>CricBrawl - Privacy Policy</title>
+    <title>Mastering Fantasy Cricket- A Guide to Playing on CricBrawl</title>
+    <meta name="description"
+        content="Dive into the world of fantasy cricket with CricBrawl! Learn how to sign up, create your dream team, join contests, follow live action, score points, and win prizes. Whether you're a seasoned cricket enthusiast or a newcomer, CricBrawl offers an immersive gaming experience where skill and strategy reign supreme. Join us today and embark on an exhilarating fantasy cricket journey!">
+    <meta name="keywords"
+        content="Cricket in America, Fantasy Cricket App USA, Cricket Fantasy App Download USA, USA Cricket, Best Fantasy Cricket App USA, Mobile Fantasy Cricket USA, Fantasy Cricket USS, Play Fantasy Cricket USA, Real Cash Fantasy Cricket USA, USA Fantasy Cricket Leagues">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
