--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>CricBrawl - Privacy Policy</title>
+    <title>Protecting Your Privacy - CricBrawl's Comprehensive Privacy Policy</title>
+    <meta name="description"
+        content="Explore CricBrawl's Privacy Policy, designed to safeguard your personal information while using our platform. Learn how we collect, use, and protect your data, including information on third-party links, data security measures, children's privacy, international data transfers, tax compliance, policy revisions, and contact details for inquiries. Your privacy matters to us, and we're committed to transparency and security every step of the way.">
+    <meta name="keywords"
+        content="Cricket in America, Fantasy Cricket App USA, Cricket Fantasy App Download USA, USA Cricket, Best Fantasy Cricket App USA, Mobile Fantasy Cricket USA, Fantasy Cricket USS, Play Fantasy Cricket USA, Real Cash Fantasy Cricket USA, USA Fantasy Cricket Leagues">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
