--- a/pages/responsible.html
+++ b/pages/responsible.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>CricBrawl - Privacy Policy</title>
+    <title>Playing Responsibly- CricBrawl's Commitment to Safe Gaming</title>
+    <meta name="description"
+        content="Discover how CricBrawl promotes responsible gaming practices and prioritizes the well-being of users. Learn about our age verification process, self-exclusion options, and tips for playing within your means. Find support and resources for individuals struggling with gambling addiction, including contact information for assistance hotlines and organizations. At CricBrawl, we're dedicated to creating a safe and enjoyable gaming environment for all users.">
+    <meta name="keywords"
+        content="Cricket in America, Fantasy Cricket App USA, Cricket Fantasy App Download USA, USA Cricket, Best Fantasy Cricket App USA, Mobile Fantasy Cricket USA, Fantasy Cricket USS, Play Fantasy Cricket USA, Real Cash Fantasy Cricket USA, USA Fantasy Cricket Leagues">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
