--- a/pages/terms.html
+++ b/pages/terms.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>CricBrawl - Terms and Conditions</title>
+    <title>CricBrawl Terms and Conditions - Your Guide to Fantasy Cricket Gaming</title>
+    <meta name="description"
+        content="Explore the terms and conditions governing your use of CricBrawl, the ultimate platform for fantasy cricket enthusiasts. Learn about user registration, conduct guidelines, intellectual property rights, contest participation, eligibility criteria, prize distribution, and more. Stay informed and start your fantasy cricket journey with confidence!">
+    <meta name="keywords"
+        content="Cricket in America, Fantasy Cricket App USA, Cricket Fantasy App Download USA, USA Cricket, Best Fantasy Cricket App USA, Mobile Fantasy Cricket USA, Fantasy Cricket USS, Play Fantasy Cricket USA, Real Cash Fantasy Cricket USA, USA Fantasy Cricket Leagues">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
