--- a/pages/fantasy-points.html
+++ b/pages/fantasy-points.html
@@ -3,7 +3,11 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>CricBrawl - Fantasy Points Guide</title>
+    <title>Understanding Fantasy Points System on CricBrawl - Batting, Bowling, and Fielding</title>
+    <meta name="description"
+        content="Learn how fantasy points are calculated on CricBrawl for batting, bowling, and fielding performances. Dive into the key metrics for each category, bonus points, and secondary metrics to maximize your team's score in fantasy cricket contests. Start strategizing and earning points today!">
+    <meta name="keywords"
+        content="Cricket in America, Fantasy Cricket App USA, Cricket Fantasy App Download USA, USA Cricket, Best Fantasy Cricket App USA, Mobile Fantasy Cricket USA, Fantasy Cricket USS, Play Fantasy Cricket USA, Real Cash Fantasy Cricket USA, USA Fantasy Cricket Leagues">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
