--- a/index.html
+++ b/index.html
@@ -57,6 +57,126 @@
 </head>
 
 <body>
+  <script type="application/ld+json" id="Corporation Schema">
+      {
+        "@context": "https://schema.org",
+        "@type": "Corporation",
+        "name": "CricBrawl",
+        "alternateName": "Cricket Fantasy app for USA",
+        "url": "https://cricbrawl.com",
+        "logo": "https://www.cricbrawl.com/images/logo-dark.svg",
+        "sameAs": [
+          "https://www.facebook.com/profile.php?id=61557898962679",
+          "https://twitter.com/cricbrawl/",
+          "https://www.instagram.com/cricbrawl/",
+          "https://www.youtube.com/@cricbrawl",
+          "https://www.linkedin.com/company/cricbrawl"
+        ]
+      }
+      </script>
+  <script type="application/ld+json" id="JsonLDFAQ">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [{
+          "@type": "Question",
+          "name": "What is Fantasy Cricket?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Get acquainted with the concept of Fantasy Cricket, a virtual game where participants create their
+                      dream team of real cricket players from different teams. Points are awarded based on the players'
+                      performance in actual matches, offering an immersive and engaging experience."
+          }
+        },{
+          "@type": "Question",
+          "name": "Is CricBrawl Legal in US and Canada?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Learn about the legal aspects of CricBrawl in the US and Canada, ensuring clarity on the regulations
+                      governing recreational cricket played in local neighborhoods and communities."
+          }
+        },{
+          "@type": "Question",
+          "name": "Is It Secure? Is My Wallet and Data Safe?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Discover our commitment to security and data privacy, ensuring the safety of your wallet and personal
+                      information. Our platform employs robust encryption protocols and stringent security measures to
+                      safeguard your data against unauthorized access and cyber threats."
+          }
+        },{
+          "@type": "Question",
+          "name": "How Are Fantasy Points Counted?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Gain insight into the scoring system used in Fantasy Cricket, understanding how points are calculated
+                      based on players' performances such as runs scored, wickets taken, catches, and more. Stay informed to
+                      strategize effectively and maximize your team's performance."
+          }
+        },{
+          "@type": "Question",
+          "name": "Is There Tax Implication If I Win?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Explore the tax implications associated with winning in Fantasy Cricket contests, providing clarity
+                      on any potential tax obligations based on your jurisdiction and the amount of your winnings."
+          }
+        },{
+          "@type": "Question",
+          "name": "What States Are Allowed?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Check the eligibility criteria regarding participating states, ensuring compliance with applicable
+                      regulations and restrictions. Get clarity on which states permit Fantasy Cricket participation and
+                      access our platform for an unparalleled gaming experience."
+          }
+        }]
+      }
+      </script>
+  <script type="application/ld+json" id="WebsitejsonLd">
+  {
+    "@context": "https://schema.org",
+    "@type": "Mobile Applicationm",
+    "name": "CricBrawl",
+    "image": "https://www.cricbrawl.com/images/logo-dark.svg",
+    "@id": "https://imageurlid.png", -- not sure on this
+    "url": "https://cricbrawl.com",
+    "telephone": "++14697720076",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Dallas",
+      "addressRegion": "TX",
+      "postalCode": "75044",
+      "addressCountry": "US"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 32.779167, 
+      "longitude": -96.808891
+    },
+    "openingHoursSpecification": {
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday",
+        "Saturday",
+        "Sunday"
+      ],
+      "opens": "00:00",
+      "closes": "23:59"
+    },
+    "sameAs": [
+      "https://www.facebook.com/profile.php?id=61557898962679",
+      "https://twitter.com/cricbrawl/",
+      "https://www.instagram.com/cricbrawl/",
+      "https://www.youtube.com/@cricbrawl",
+      "https://www.linkedin.com/company/cricbrawl"
+    ]
+  }
+  </script>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg">
     <div class="container"> <a class="navbar-brand navbar-logo" href="#"> <img src="images/logo-dark.svg" width="120"
