json ld cassino fix

--- a/index.html
+++ b/index.html
@@ -136,12 +136,11 @@
   <script type="application/ld+json" id="WebsitejsonLd">
   {
     "@context": "https://schema.org",
-    "@type": "Mobile Applicationm",
+    "@type": "Casino",
     "name": "CricBrawl",
     "image": "https://www.cricbrawl.com/images/logo-dark.svg",
-    "@id": "https://imageurlid.png", -- not sure on this
     "url": "https://cricbrawl.com",
-    "telephone": "++14697720076",
+    "telephone": "+14697720076",
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Dallas",
