Added join us page

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <li class="nav-item"> <a class="nav-link" href="#about" data-scroll-nav="1">About</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#features" data-scroll-nav="2">Features</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#faq" data-scroll-nav="5">Faq</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#contact" data-scroll-nav="6">Contact</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="#contact" data-scroll-nav="6">Join US</a> </li>
         </ul>
       </div>
     </div>
@@ -159,7 +159,7 @@
         <div class="row">
           <div class="col-md-8 col-sm-12">
             <div class="banner-text">
-              <h3 class="white">Experience the Thrill of Fantasy Cricket</h3>
+              <h2 class="white">Experience the Thrill of Fantasy Cricket</h2>
               <h6 class="white">Crafting Winning Strategies for Cricket Fans in the USA</h6>
               <p class="banner-text white">Unleash your cricketing expertise on CricBrawl, the ultimate fantasy cricket
                 platform. Sign up now to create your dream team, compete against friends, and win exciting prizes. With
@@ -406,35 +406,39 @@
       <div class="row">
         <div class="col-md-12">
           <div class="sectioner-header text-center">
-            <h3>Contact us</h3>
+            <h3>Join us</h3>
             <span class="line"></span>
-            <p>Reach out to us for any inquiries, feedback, or assistance regarding our platform, and our dedicated team
-              will be glad to assist you</p>
+            <p>CricBrawl is shaping the future of fantasy cricket, and we want you to be a part of it. Enter your name
+              and email to join
+              us on this exciting journey. Stay tuned for updates as we launch our first version before 2024 ICC Men's
+              T20 World Cup.
+              2024</p>
           </div>
           <div class="section-content">
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-8 ">
-                <form id="contact_form" class="contact_form" action="">
+                <form id="contact_form" class="contact_form" style="padding-top: 2rem;" action="">
                   <div class="row">
                     <div class="col">
-                      <input type="text" id="from_name" class="form-input w-100" name="full-name"
+                      <input type="text" name="from_name" id="from_name" class="form-input w-100"
                         placeholder="Full Name" required>
                     </div>
                     <div class="col">
-                      <input type="email" id="reply_to" class="form-input w-100" name="email" placeholder="Email"
+                      <input type="email" id="reply_to" class="form-input w-100" name="reply_to" placeholder="Email"
                         required>
                     </div>
                   </div>
                   <div class="field input">
                     <input id="to_name" name="to_name" type="hidden" value="CricBrawl Team">
                   </div>
-                  <input type="text" id="subject" class="form-input w-100" name="subject" placeholder="Subject">
-                  <textarea class="form-input w-100" id="message" placeholder="Message" name="message"></textarea>
-                  <button class="btn-grad w-100 text-uppercase" type="submit" name="button"
-                    onclick="sendEmail()">submit</button>
+                  <input type="hidden" id="subject" class="form-input w-100" name="subject" placeholder="Subject">
+                  <!-- <textarea class="form-input w-100" type="hidden" id="message" placeholder="Message"
+                    name="message"></textarea> -->
+                  <button class="btn-grad w-100 text-uppercase" type="submit" name="button" onclick="sendEmail()">JOIN
+                    WaitList </button>
                 </form>
                 <div>
-                  <p class="message-ok invisible">Your message has been sent, thank you.</p>
+                  <p class="message-ok invisible">You have joined our email list!</p>
                 </div>
               </div>
               <div class="col-sm-12 col-md-12 col-lg-4">
@@ -458,12 +462,12 @@
                           href="mailto:abcdefg@gmail.com">info@cricbrawl.com</a> </p>
                     </div>
                   </div>
-                  <div class="contact-item media"> <i class="fa fa-clock media-left media-right-margin"></i>
+                  <!-- <div class="contact-item media"> <i class="fa fa-clock media-left media-right-margin"></i>
                     <div class="media-body">
                       <p class="text-uppercase">Working Hours</p>
                       <p class="text-uppercase">Mon-Fri 9.00 AM to 5.00PM.</p>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
