--- a/pages/how-to-play.html
+++ b/pages/how-to-play.html
@@ -47,8 +47,8 @@
                     <li class="nav-item"> <a class="nav-link" href="../index.html#features"
                             data-scroll-nav="2">Features</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="../index.html#faq" data-scroll-nav="5">Faq</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="../index.html#contact"
-                            data-scroll-nav="6">Contact</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="../index.html#contact" data-scroll-nav="6">Join
+                            Us</a> </li>
                 </ul>
             </div>
         </div>
